# hyper_trader_ts

./: README.md  package-lock.json  product_knowledge_base.md
Documents/: OAUTH_SETUP.md  fibonacci_hedging_strategy.md  product_knowledge_base.md
Documents/new_window_prompts/: next_chat_prompt_v1.md
backend/: .env.example  README.md  package.json  pyproject.toml  tsconfig.json
backend/src/: index.ts  main.py  test-db.ts
backend/src/api/: __init__.py  health.py  market_data.py  portfolio.py  positions.py  trading_plans.py
backend/src/database/: __init__.py  connection.py
backend/src/database/migrations/: 001_create_initial_schema.sql
backend/src/database/repositories/: __init__.py  portfolio_repository.py  position_repository.py  trading_plan_repository.py
backend/src/models/: __init__.py  portfolio.py  position.py  trading_plan.py
backend/src/routes/: auth.ts
backend/src/services/: __init__.py  websocket_manager.py
frontend/: nuxt.config.ts  package.json
frontend/app/: app.vue
frontend/app/composables/: useAuth.ts
frontend/app/middleware/: auth.global.ts
frontend/app/pages/: dashboard.vue  index.vue  login.vue  register.vue
frontend/composables/: useAuth.ts
frontend/pages/: index.vue  login.vue
frontend/server/api/auth/: [...].ts
new_window_prompts/: next_chat_prompt_v2.md
